# Junction_Hackathon

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml
dashboard/: README.md  app.py  demo.py  llm_pipeline.py  requirements.txt  sqlite_tools.py  test_api.py
external-service/: .env.example  README.md  app.py
telemetry-service/: README.md  api.py  main.py  pyproject.toml  telemetry_generator.py
